Fix Markdown Dark Mode

--- a/resources/css/components/fieldtypes/markdown.css
+++ b/resources/css/components/fieldtypes/markdown.css
@@ -93,6 +93,13 @@
         background: linear-gradient(180deg, theme('colors.gray.900'), hsl(210, 20%, 13%));
     }
 
+    .editor {
+        @apply bg-gray-800 text-gray-200;
+        .cm-header {
+            @apply text-white;
+        }
+    }
+
     .helpers {
         @apply bg-gray-900 text-white border-t border-gray-950;
     }
